--- a/internet/html/baggage.html
+++ b/internet/html/baggage.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../css/main.css" />
     <title>Fahrgastinformation</title>
   </head>
+  <header>
+    <div class="logo">
+      <img src="../pix/skyline_logo.svg" alt="Skyline Logo" />
+    </div>
+  </header>
   <body>
     <img src="../pix/flugzeug.png" alt="Flugzeug Bild" />
   </body>
