--- a/internet/html/baggage.html
+++ b/internet/html/baggage.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
+    <l<link rel="preconnect" href="https://api.fonts.coollabs.io" crossorigin />
+    <link
+      href="https://api.fonts.coollabs.io/css2?family=Concert+One&family=Passion+One:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Fahrgastinformation</title>
   </head>
   <header>
