--- a/internet/html/baggage.html
+++ b/internet/html/baggage.html
@@ -16,6 +16,7 @@
       <img src="../pix/skyline_logo.svg" alt="Skyline Logo" />
     </div>
   </header>
+  <h1>Fahrgastinformation</h1>
   <body>
     <img src="../pix/flugzeug.png" alt="Flugzeug Bild" />
   </body>
