--- a/internet/html/baggage.html
+++ b/internet/html/baggage.html
@@ -17,6 +17,7 @@
     </div>
   </header>
   <h1>Fahrgastinformation</h1>
+  <h2>Empfehlungen für Ihr Reisegepäck</h2>
   <body>
     <img src="../pix/flugzeug.png" alt="Flugzeug Bild" />
   </body>
