--- a/internet/html/baggage.html
+++ b/internet/html/baggage.html
@@ -18,6 +18,22 @@
   </header>
   <h1>Fahrgastinformation</h1>
   <h2>Empfehlungen für Ihr Reisegepäck</h2>
+  <ul>
+    <li>
+      Auf Ihrer Buchungsbestätigung finden Sie die max. Höhe und das max.
+      Gewicht für das Freigepäck.
+    </li>
+    <li>
+      Alle Taschen und Koffer sollten mit Ihrem Namen und Ihrer Adresse
+      gekennzeichnet sein. Das gilt auch für das Handgepäck.
+      Beschriftungsetiketten erhalten Sie kostenlos in unserem Service-Center.
+    </li>
+    <li>
+      Folgende Gegenstände sollten besser in das Handgepäck gelegt werden:
+      Computer, Kameras, Reisepässe und Dokumente, Geld, Schmuck, Wertsachen,
+      usw.
+    </li>
+  </ul>
   <body>
     <img src="../pix/flugzeug.png" alt="Flugzeug Bild" />
   </body>
